Fix results layout and hide coverflowX content

--- a/src/styles/explore.css
+++ b/src/styles/explore.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: calc(100vh - 200px);
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .main-content {
@@ -20,18 +21,26 @@
 
 .explore-result {
   display: grid;
-  grid-template-columns: 150px 1fr 1fr 100px;
+  grid-template-columns: 130px 1fr 1fr 100px;
   border-bottom: 1px solid var(--secondary-blue);
   padding:15px;
   align-items: center;
 }
 
-.explore-result:hover {
+.my-playlists-result {
+  display: grid;
+  grid-template-columns: 130px 1fr 1fr 70px 70px;
+  border-bottom: 1px solid var(--secondary-blue);
+  padding:15px;
+  align-items: center;
+}
+
+.explore-result:hover, .my-playlists-result:hover {
   border-bottom: 1px solid var(--blue);
   box-shadow: 0 7px 15px #111;
 }
 
-.explore-result img {
+.explore-result img, .my-playlists-result img {
   width: 110px;
   height: 110px;
   border: 4px solid var(--secondary-blue);
@@ -46,6 +55,10 @@
   font-size: .9rem;
   justify-self: flex-end;
   box-shadow: inset 2px 2px 5px black;
+}
+
+.edit {
+  padding: .5rem 1rem;
 }
 
 .play:hover {
